# hf_tutorial

./: .gitignore  Makefile  README.md  pyproject.toml
jupyter/: autoclass.ipynb  preprocess.ipynb
marimo/: autoclass.py  pipelines.py  preprocess.py
script/: job.sh
src/: autoclass.ipynb  autoclass.py  finetune.py  finetune_trainer.py  pipelines.ipynb  pipelines.py  preprocess.py
