[project]
name = "hf-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "torchcodec>=0.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
cpu = ["torch==2.8.0"]
gpu = ["torch==2.8.0"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "marimo>=0.17.0",
    "nbformat>=5.10.4",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu-mac", extra = "cpu", marker = "platform_system == 'macOS'" },
    { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'macOS'" },
    { index = "pytorch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu-mac"
url = "https://pypi.python.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
